# cookiecutter-pypackage

./: .gitignore  LICENSE  README.md  README.rst  UPDATING.md  cookiecutter.json  cspell.json  mkenv.sh  pyproject.toml  requirements.txt  tox.ini  update.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake.py
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  README.md  README.rst  cspell.json  mkenv.sh  pyproject.toml  requirements.txt  setup.py  setup.sh  tox.ini
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_tests.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: test_cli.py  test_tests.py
