[tool.poetry]
name = "cookiecutter-pypackage"
version = "0.1.4"
description = "A Cookiecutter Template for a Python Package"
authors = ["Matthew Wyant <me@matthewwyant.com>"]
license = "GPLv3"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cookies = "^0.7.0"
pytest-runner = "^6.0.1"
rich = "^13.7.1"
ruff = "^0.3.5"
tox = "^4.14.2"
click = "^8.1.7"

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "ANN101",
    "ANN102",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
]
unfixable = [
    "F401",
    "F841",
]

[tool.ruff.per-file-ignores]
"test_*.py" = ["ANN001", "ANN002", "ANN003", "D103"]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
