[project]
name = "cookiecutter-pypackage"
version = "0.1.0"
description = "A Cookiecutter Template for a Python Package"
authors = [{ name = "Matthew Wyant", email = "me@matthewwyant.com" }]

keywords = ["cookiecutter", "python", "package", "uv"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

dependencies = ["click>=8.1.8", "cookiecutter>=2.6.0", "rich>=13.9.4"]
requires-python = ">=3.9"

readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cookies>=0.7.0",
    "pytest-runner>=6.0.1",
    "ruff>=0.9.4",
]

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
# https://docs.pypi.org/project_metadata/#project-urls
[project.urls]
Repository = "https://github.com/therealzanfar/cookiecutter-pypackage"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    # "ANN101",
    # "ANN102",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
]
unfixable = ["F401", "F841"]

[tool.ruff.per-file-ignores]
"test_*.py" = ["ANN001", "ANN002", "ANN003", "D103"]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
