[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
# homepage = ""
repository = "{{cookiecutter.git_url}}"
# documentation = ""
# keywords = [""]
include = ["LICENSE"]


classifiers = [
    # https://pypi.org/classifiers/
    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
{%- if cookiecutter.command_line_interface|lower == 'click' %}
    "Environment :: Console",
{%- endif %}
    "Intended Audience :: Developers",
{%- if cookiecutter.license == 'GPL-3.0-plus' %}
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
{%- elif cookiecutter.license == 'BSD-3-Clause' %}
    "License :: OSI Approved :: BSD License",
{%- elif cookiecutter.license == 'MIT' %}
    "License :: OSI Approved :: MIT License",
{%- elif cookiecutter.license == 'Apache-2.0' %}
    "License :: OSI Approved :: Apache Software License",
{%- elif cookiecutter.license == 'Proprietary' %}
    "License :: Other/Proprietary License",
{%- endif %}
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # "Operating System :: Unix",
    # "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    # "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: {{cookiecutter.python_min_version}}",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]{% if cookiecutter.command_line_interface|lower != 'no cli' %}


# https://pypi.org/classifiers/
[tool.poetry.scripts]
{{cookiecutter.project_slug}} = '{{cookiecutter.project_slug}}.__main__:cli_main'
{%- endif %}

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_min_version}}"
{%- if cookiecutter.command_line_interface|lower == 'click' %}
click = "^8.1.7"
{%- endif %}
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
ruff = "^0.3.5"
tox = "^4.14.2"

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "ANN101",
    "ANN102",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
]
unfixable = [
    "F401",
    "F841",
]

[tool.ruff.per-file-ignores]
"test_*.py" = ["ANN001", "ANN002", "ANN003", "D103"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
