[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" },
]

keywords = []

classifiers = [
    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
{%- if cookiecutter.command_line_interface|lower == 'click' %}
    "Environment :: Console",
{%- endif %}
    "Intended Audience :: Developers",
{%- if cookiecutter.license == 'GPL-3.0-plus' %}
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
{%- elif cookiecutter.license == 'BSD-3-Clause' %}
    "License :: OSI Approved :: BSD License",
{%- elif cookiecutter.license == 'MIT' %}
    "License :: OSI Approved :: MIT License",
{%- elif cookiecutter.license == 'Apache-2.0' %}
    "License :: OSI Approved :: Apache Software License",
{%- elif cookiecutter.license == 'Proprietary' %}
    "License :: Other/Proprietary License",
{%- endif %}
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # "Operating System :: Unix",
    # "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    # "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: {{cookiecutter.python_min_version}}",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]# https://pypi.org/classifiers/

dependencies = [
{%- if cookiecutter.command_line_interface|lower == 'click' %}
    "click>=8.1.8",
{%- endif %}
    "rich>=13.9.4",
]

requires-python = ">={{cookiecutter.python_min_version}}"

readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cookies>=0.7.0",
    "pytest-runner>=6.0.1",
    "ruff>=0.9.4",
]{% if cookiecutter.command_line_interface|lower != 'no cli' %}

[tool.poetry.scripts]
{{cookiecutter.project_slug}} = '{{cookiecutter.project_slug}}.__main__:cli_main'
{%- endif %}

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
# https://docs.pypi.org/project_metadata/#project-urls
[project.urls]
Repository = "{{cookiecutter.git_url}}"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "ANN101",
    "ANN102",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
]
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["ANN001", "ANN002", "ANN003", "D101", "D103"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
